--- a/BeestjeOpEenFeestje/appsettings.json
+++ b/BeestjeOpEenFeestje/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=AnimalOnAPartyDb;Trusted_Connection=True;Encrypt=False;"
+  },
+    "AllowedHosts": "*"
+  }
