--- a/BeestjeOpEenFeestje/appsettings.json
+++ b/BeestjeOpEenFeestje/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AnimalOnAPartyDb;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=tcp:prog6opdr.database.windows.net,1433;Initial Catalog=Prog6Opdr;Persist Security Info=False;User ID=prog6opdr;Password=Qwerty123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
     "AllowedHosts": "*"
   }
