--- a/.github/workflows/main_beestjeopeenfeestje.yml
+++ b/.github/workflows/main_beestjeopeenfeestje.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - BeestjeOpEenFeestje
 
 on:
@@ -14,18 +11,25 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      # Restore dependencies using the solution file in the BeestjeOpEenFeestje folder
+      - name: Restore Dependencies
+        run: dotnet restore BeestjeOpEenFeestje/BeestjeOpEenFeestje.sln
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      # Build the solution inside the BeestjeOpEenFeestje folder
+      - name: Build with dotnet
+        run: dotnet build BeestjeOpEenFeestje/BeestjeOpEenFeestje.sln --configuration Release
+
+      # Publish the app, specifying the .csproj file inside the BeestjeOpEenFeestje folder
+      - name: Publish with dotnet
+        run: dotnet publish BeestjeOpEenFeestje/BeestjeOpEenFeestje.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -39,15 +43,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -61,5 +63,4 @@ jobs:
         with:
           app-name: 'BeestjeOpEenFeestje'
           slot-name: 'Production'
-          package: .
-          
+          package: ${{env.DOTNET_ROOT}}/myapp
